--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,10 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  .test-warning {
+    text-align: center;
+    color: red;
+    margin: 10px 0;
+  }
 }
